--- a/README
+++ b/README
@@ -1,49 +1,11 @@
-This is your new Play application
-=================================
+Play Framework Intergration with 
 
-This file will be packaged with your application when using `activator dist`.
+|Framework|Example|
+|---------|-------|
+|[Anorm](https://github.com/playframework/anorm)|controllers/ComputerController
+|[play-bootsrap](http://adrianhurt.github.io/play-bootstrap)|controllers/PlayBootstrap
+|[startbootstrap-sb-admin-2](https://github.com/BlackrockDigital/startbootstrap-sb-admin-2)|views/bootstrap
+|[spark-play-activator](https://github.com/alexmasselot/spark-play-activator)|SparkController
+|[play-spark-module](https://github.com/JoaoVasques/play-spark-module)|SubmitSparkJob
 
-There are several demonstration files available in this template.
 
-Controllers
-===========
-
-- HomeController.scala:
-
-  Shows how to handle simple HTTP requests.
-
-- AsyncController.scala:
-
-  Shows how to do asynchronous programming when handling a request.
-
-- CountController.scala:
-
-  Shows how to inject a component into a controller and use the component when
-  handling requests.
-
-Components
-==========
-
-- Module.scala:
-
-  Shows how to use Guice to bind all the components needed by your application.
-
-- Counter.scala:
-
-  An example of a component that contains state, in this case a simple counter.
-
-- ApplicationTimer.scala:
-
-  An example of a component that starts when the application starts and stops
-  when the application stops.
-
-Filters
-=======
-
-- Filters.scala:
-
-  Creates the list of HTTP filters used by your application.
-
-- ExampleFilter.scala
-
-  A simple filter that adds a header to every response.
